<resources>
    <string name="app_name">Notes Keep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="all_notes">All Notes</string>
    <string name="favourites">Favourites</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>


    <string name="save">save</string>
    <string name="add_note_title">Add Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete">Delete</string>
    <string name="confirm_yes">YES</string>
    <string name="confirm_no">NO</string>
    <string name="trash_dialog_title">Empty Trash</string>

    <string name="deleting_note_text">Deleting notes…</string>
    <string name="trash_dialog_message">Are you sure want to empty trash ? All notes will be deleted permanently.</string>
    <string name="undo">UND0</string>
    <string name="undo_snackbar_message">Undo Move To Trash</string>
    <string name="font_size">Font size</string>
    <string name="rate_text">Rate Us</string>
    <string name="policy">Privacy Policy</string>
    <string name="feedback">Send Feedback</string>
    <string name="sort">Sort</string>

    <string name="order_by_name">Order by name</string>
    <string name="order_by_date_created">Order by date created</string>
    <string name="order_by_last_modified">Order by last modified</string>
    <string name="share_chooser_text">Share using</string>

    <string name="no_title">No title</string>
    <string name="empty_note_prompt">Cannot share empty note</string>

    <string name="blank_note_prompt">Note Cannot be Blank</string>
    <string name="updating">updating…</string>
    <string name="saving">Saving…</string>
    <string name="restore">Restore</string>
    <string name="trash_note_edit_prompt">Cannot Edit Note in Trash</string>
    <string name="key_send_feedback">SEND_FEEDBACK</string>
    <string name="key_rate">RATE</string>
    <string name="bug_report">Bug Report</string>
    <string name="key_bug_report">BUG_REPORT</string>
    <string name="subject_email">Feedback From NotesKeep</string>

    <string name="text_feedback">Send Feedback:</string>
    <string name="dear">Dear …,</string>
    <string name="about_text">About</string>
    <string name="theme_text"><![CDATA[Theme & UI]]></string>
    <string name="key_font_size">FONT_SIZE</string>
    <string name="add_new_note">Add New Note</string>
    <string name="add_new_favourite">Favourite Notes</string>
    <string name="nothing_in_trash">Nothing In Trash</string>
    <string name="note_icon">note icon</string>
    <string name="theme_dark">Dark Mode</string>
    <string name="key_mode_dark" translatable="false">KEY_MODE_DARK</string>
    <string name="search">Search</string>
    <string name="copy_text">Copy</string>
    <string name="more">More Options</string>

    <string name="default_text">Default</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="text_copied">Copied</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-3647278513203920/5764849187</string>
    <string name="order">Order</string>
    <string name="SHARED_PREF_DARK_MODE_KEY" translatable="false">mode</string>
    <string name="SHARED_PREF_VIEW_MODE_RV" translatable="false">note_mode_view</string>
    <string name="note_is_blank">Cannot Copy Blank Note</string>
    <string name="date_added">Date Added</string>
    <string name="recent">Recent</string>
    <string name="older">Older</string>
    <string name="removed_fav">Removed From Favourite</string>
    <string name="added_fav">Added To Favourite</string>
    <string name="empty_trash">Empty Trash</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_label">Create New Label</string>
    <string name="labels">Labels</string>
    <string name="delete_label">Delete Label</string>
    <string name="delete_label_message">Are you sure want to Delete this Label? It will be removed from all notes that are tagged with it</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="deleted">Deleted</string>
    <string name="add_label">Add Label</string>
    <string name="label_name">Label Title</string>
    <string name="discard">Cancel</string>
    <string name="edit_label">Edit Label</string>
    <string name="done_adding">Done</string>
    <string name="manage_labels">Manage Labels</string>
    <string name="other_category">Others</string>
    <string name="key_auto_empty_trash" translatable="false">Auto Empty Trash</string>
    <string name="trash_setting_title">Clear Trash</string>
    <string name="trash_summary">automatically empty trash after 30 days</string>
    <string name="KEY_DRAWER_POS" translatable="false">drawerPos</string>
    <string name="empty_label_dialog_text">There Are No Labels Yet.\n Add New Label ?</string>
    <string name="no_notes_here">No Notes Here</string>
    <string name="oops_no_labels_here">OOPS... No Labels Here</string>
    <string name="updating_text">Updating</string>
    <string name="toast_no_labels">There Are No Labels, Add New Label</string>
    <string name="privacy">Privacy</string>
    <string name="key_fingerprint" translatable="false">fingerprint</string>
    <string name="title_fingerprint">Fingerprint</string>
    <string name="fingerprint_summary">Authenticate with Fingerprint</string>
    <string name="text_enable_fingerprint_prompt">Enabled Fingerprint in Settings</string>
    <string name="fingerprint_compatibility_prompt">Device Not Compatible</string>
    <string name="SHARED_PREF_FINGERPRINT" translatable="false">FingerAuthentication</string>
    <string name="title_prompt">Access NotesKeep</string>
    <string name="biometric_prompt_subtitle">Access using your biometric credential</string>
    <string name="cancel">Cancel</string>
    <string name="auth_noteskeep">Authenticate NotesKeep</string>
    <string name="auth_success">Authentication succeeded!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="login">Login</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="basic_protection">Basic Protection</string>
    <string name="key_password_protection">password_protection</string>
    <string name="password_hint">Password Hint</string>
    <string name="hint_key">password_hint_key</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="noteskeep">NotesKeep !</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="blank_field_prompt">Field Cannot Be Blank</string>
</resources>
