<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/note_view_mode"
        android:icon="@drawable/ic_view_list"
        android:title="@string/order"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort_action"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_recent"
                android:title="@string/recent" />

            <item
                android:id="@+id/sort_older"
                android:title="@string/older" />
        </menu>
    </item>


    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/empty_trash"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>