<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_note"
            android:title="@string/all_notes" />
        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favourites" />
        <item
            android:id="@+id/trashFragment"
            android:icon="@drawable/ic_delete"
            android:title="@string/trash" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>
