<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.olabode.wilson.daggernoteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.olabode.wilson.daggernoteapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.olabode.wilson.daggernoteapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/trashFragment"
        android:name="com.olabode.wilson.daggernoteapp.ui.trash.TrashFragment"
        android:label="trash_fragment"
        tools:layout="@layout/trash_fragment" />
    <fragment
        android:id="@+id/favourites"
        android:name="com.olabode.wilson.daggernoteapp.ui.favourite.Favourites"
        android:label="favourites_fragment"
        tools:layout="@layout/favourites_fragment" />
    <fragment
        android:id="@+id/settings"
        android:name="com.olabode.wilson.daggernoteapp.ui.settings.Settings"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>